# ansible

./: .gitignore  bootstrap_devel.sh  hosts  playbook.yaml  pyproject.toml
playbooks/: inventory.yaml  site.yaml
playbooks/roles/av/handlers/: main.yaml
playbooks/roles/av/tasks/: main.yaml
playbooks/roles/av/templates/: freshclam.conf  scan.conf
playbooks/roles/bhyve/tasks/: main.yaml
playbooks/roles/certbot/tasks/: main.yaml
playbooks/roles/common/tasks/: main.yaml
playbooks/roles/database/tasks/: main.yaml
playbooks/roles/epel/tasks/: main.yaml
playbooks/roles/mail/handlers/: main.yaml
playbooks/roles/mail/tasks/: main.yaml
playbooks/roles/mail/templates/: 90-sieve.conf  antivirus.conf  dkim_signing.conf  main.cf
playbooks/roles/mail/templates/dovecot/: local.conf
playbooks/rpm_keys/: rspamd.asc
