[tool.poetry]
name = "ansible-playbooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ansible_playbooks"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.1.0"
ansible-lint = {version = "^6.10.2", markers = "platform_system == 'Linux'"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
